<resources>
    <string name="app_name">MineElite</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_msg">Sign in to continue mining</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="new_account">Don\'t have an account? Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_msg">Sign up to start mining</string>
    <string name="phone_number">Phone Number</string>
    <string name="referral_code">Referral Code (Optional)</string>
    <string name="sign_up">Sign Up</string>
    <string name="old_account">Already have an account? Sign In</string>
    <string name="withdrawal_msg">Withdrawal options will appear here.</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="terms">Terms</string>
    <string name="t_n_c">Terms and conditions will appear here.</string>
    <string name="streak_reward">Streak Reward</string>
    <string name="streak_msg">Your streak rewards will appear here.</string>
    <string name="refer_and_earn"><![CDATA[Refer & Earn]]></string>
    <string name="refer_msg">Invite friends and earn rewards!</string>
    <string name="extend_time">EXTEND TIME</string>
    <string name="start">START</string>
    <string name="close">Close</string>
    <string name="please_wait">Please wait…</string>
    <string name="login">Login</string>
    <string name="complete_daily_tasks_and_earn_exciting_rewards">Complete daily streak and earn exciting rewards!</string>
    <string name="reward_icon">🎁</string>
    <string name="rewards">Rewards</string>
    <string name="streak">Streak</string>
    <string name="demo_email">crypt@gmail.com</string>
    <string name="loading">Loading...</string>
    <string name="_606">606</string>
    <string name="total_coins">Total Coins</string>
    <string name="_0">0</string>
    <string name="current_streak">Current Streak</string>
    <string name="inactive">Inactive</string>
    <string name="mining_status">Mining Status</string>
    <string name="rewards_claimed">Rewards Claimed</string>
    <string name="recent_mining_history">Recent Mining History</string>
    <string name="no_mining_history_yet">No mining history yet</string>
    <string name="status_active">Active</string>
    <string name="status_inactive">Inactive</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="refer">🤝</string>
    <string name="your_referral_code">Your Referral Code</string>
    <string name="rc979129">0000000</string>
    <string name="copy_invite_link">Copy Invite Code</string>
    <string name="total_referrals">Total Referrals</string>
    <string name="earnings_from_referrals">Earnings from Referrals</string>
    <string name="_1">1</string>
    <string name="coming_soon">Coming soon</string>
    <string name="no_rewards_found">No rewards found.</string>
    <string name="active">Active</string>
    <string name="mining">Mining...</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hyper_text">HOW TO START ??</string>
    <string name="logout">Logout</string>
    <string name="telegram">Telegram</string>
    <string name="contact_support">Contact Support</string>
    <string name="useravatar">UserAvatar</string>
    <string name="enter_withdrawal_amount">Enter Withdrawal Amount</string>
    <string name="withdraw">Withdraw</string>
    <string name="amount">Amount</string>
</resources>