<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/rounded_bg_white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_withdrawal_amount"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/withdrawAmountInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:background="@drawable/edittext_bg"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/confirmWithdrawBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/withdraw"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/yellow_500"
        android:layout_marginTop="16dp"
        android:paddingVertical="10dp"/>
</LinearLayout>
